sets up for electron development and certain style compilation

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Daily Goals | What did you accomplish today?</title>
+
+    <link href="./src/style/css/style.css" rel="stylesheet" type="text/css" />
+    
 </head>
 <body>
-    
+    <i class="fas fa-exclamation-triangle"></i>
 </body>
 </html>
