*requires yarn install* adds jquery-ui && more DOM effects && changes task specific buttons to full height

--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
                     </span>
 
                     <ul class="task-specific-btn-list">
-                        <li role="toggle-focus-btn"><i class="fas fa-chevron-right"></i></li>
-                        <span style="display: none;" class="focus-btns">
+                        <li role="toggle-focus-btn"><i class="fas fa-clock"></i></li>
+                        <!-- <span style="display: flex; padding: 0;width: 100%;" class="focus-btns"> -->
 
-                            <li role="focus-btn">focus</li>
-                            <li role="multi-btn">multi</li>
-                        </span>
+                            <li role="focus-btn" style="display: none;line-height: 40px;">focus</li>
+                            <li role="multi-btn" style="display: none;line-height: 40px;">multi</li>
+                        <!-- </span> -->
                     </ul>
                 </li>
                 <li>
